# classgen

./: CMakeLists.txt  README.md  class.hpp  test.c  test.cpp
cmake/: classgen.cmake  convert.py
